# backend/docs/swagger/swagger.json
@@ -1437,7 +1437,7 @@
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "$ref": "#/definitions/octotify_internal_handler_dto.UserDTO"
+                                            "$ref": "#/definitions/octotify_internal_handler_dto.UserProfileResp"
                                         }
                                     }
                                 }
@@ -2119,6 +2119,20 @@
                     "description": "用户名",
                     "type": "string",
                     "example": "octotify"
+                }
+            }
+        },
+        "octotify_internal_handler_dto.UserProfileResp": {
+            "description": "查询用户个人信息时返回的响应结构",
+            "type": "object",
+            "properties": {
+                "user": {
+                    "description": "用户信息",
+                    "allOf": [
+                        {
+                            "$ref": "#/definitions/octotify_internal_handler_dto.UserDTO"
+                        }
+                    ]
                 }
             }
         },
